[metadata]
name = kayaclock-utils
version = 0.1.0
author = Matěj Volf
author_email = mat.volfik@gmail.com
url = https://github.com/kayaclock/kayaclock-utils
license = EUPL-1.2
license_files = LICENSE.txt, LICENSE-cs.txt
platforms = linux
description = Kayaclock utilities – data structures definitions etc.
long_description_content_type = text/markdown
long_description =
    Various utils that need to be used across different components of kayaclock.
    Currently just data structures. The project is in early stage, a lot might change
    as will be needed.

[options]
packages = find:
install_requires =
    pydantic >= 1.7.3, <2.0
python_requires = >= 3.8.5, < 3.9
include_package_data = True

[options.package_data]
* = py.typed
